# speck

./: .gitignore  Pipfile  README.md  forge.config.js  main.js  package-lock.json  package.json  preload.js  renderer.js  services.spec  speck.spec
app/: config.py  huey.db-shm  huey.db-wal  main.py  scheduler.py  server.py  speck.db  worker.py
docs/: runpod.md
extension/: background-sw.js  background.js  content.js  gmail-content.js  manifest.firefox.json  manifest.json  package-lock.json  package.json  (+3 more)
speck-server/: pyproject.toml  speck.spec
speck-server/speck/: alembic.ini  config.py  main.py  server.py
speck-server/speck/alembic/: env.py
speck-server/speck/alembic/versions/: 729c1e3e9bdf_change_conversation_id_to_uuid.py  9ad631af40d8_initial_revision.py  a36d1b2d48ba_initial_migration.py  fb0b0b872034_message_full_text_search_fts.py
speck-server/speck/chat/: graph.py  models.py
speck-server/speck/core/: __init__.py  cache.py  chat.py  event_manager.py  llm_service_manager.py  routes.py  task_manager.py  tasks.py  utils.py
speck-server/speck/core/templates/: _response_format.txt
speck-server/speck/emails/: models.py  routes.py  tasks.py  tools.py  utils.py
speck-server/speck/emails/templates/: _general_context.txt  _message_details.txt  analyze_actions_and_urgency_prompt.txt  message_summary_prompt.txt  message_type_prompt.txt  select_functions_prompt.txt
speck-server/speck/hooks/: hook-core.py  hook-sqlite_vec.py
speck-server/speck/profiles/: models.py  tasks.py
speck-server/speck/profiles/templates/: profile_attribute_prompt.txt
(+47 files in other folders)
