[tool.poetry]
name = "speck"
version = "0.1.0"
description = ""
authors = ["Andrew Tork Baker <andrew.tork.baker@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
click = "^8.1.7"
diskcache = "^5.6.3"
fastapi = "^0.111.1"
google-api-python-client = "^2.137.0"
google-auth = "^2.32.0"
html2text = "^2024.2.26"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
keyring = "^25.2.1"
langchain = "^0.2.15"
langchain-community = "^0.2.15"
langchain-openai = "^0.1.23"
pendulum = "^3.0.0"
playwright = "^1.45.0"
psutil = "^6.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlite-vec = "^0.1.1"
sqlmodel = "^0.0.21"
uvicorn = "^0.30.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
